# rust_days

./: .gitignore  cargo.toml  example.rs
hello-world/: Cargo.toml
hello-world/src/: main.rs
notes/: Cargo.toml
notes/src/: main.rs
random-number-generator/: Cargo.toml
random-number-generator/src/: main.rs
