[package]
name = "notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
oid = "0.2.1"
futures = "0.3"
bson = "2.9.0"
uuid = "1.7.0"
mongodb ={ version = "2.2" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
